--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,6 +8,30 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "dependencies": {
+    "@headlessui/react": "^1.4.2",
+    "@heroicons/react": "^1.0.5",
+    "@local/next-ui": "*",
+    "@local/ui": "*",
+    "classnames": "^2.3.1",
+    "next": "12.0.7",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-error-boundary": "^3.1.4"
+  },
+  "devDependencies": {
+    "@local/eslint": "*",
+    "@local/tsconfig": "*",
+    "@tailwindcss/forms": "^0.4.0",
+    "@types/react": "17.0.38",
+    "autoprefixer": "^10.4.1",
+    "eslint": "8.6.0",
+    "eslint-plugin-tailwindcss": "^3.0.3",
+    "next-transpile-modules": "9.0.0",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.9",
+    "typescript": "^4.5.3"
+  },
   "postcss": {
     "plugins": {
       "tailwindcss": {},
@@ -16,29 +40,5 @@
   },
   "prettier": {
     "printWidth": 120
-  },
-  "dependencies": {
-    "@headlessui/react": "^1.4.2",
-    "@heroicons/react": "^1.0.5",
-    "classnames": "^2.3.1",
-    "next": "12.0.7",
-    "next-ui": "*",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-error-boundary": "^3.1.4",
-    "ui": "*"
-  },
-  "devDependencies": {
-    "@tailwindcss/forms": "^0.4.0",
-    "@types/react": "17.0.38",
-    "autoprefixer": "^10.4.1",
-    "eslint": "8.6.0",
-    "eslint-config": "*",
-    "eslint-plugin-tailwindcss": "^3.0.3",
-    "next-transpile-modules": "9.0.0",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.9",
-    "tsconfig": "*",
-    "typescript": "^4.5.3"
   }
 }
