--- a/packages/next-ui/package.json
+++ b/packages/next-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-ui",
+  "name": "@local/next-ui",
   "version": "0.0.0",
   "main": "./index.ts",
   "types": "./index.ts",
@@ -7,7 +7,7 @@
   "devDependencies": {
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "tsconfig": "*",
+    "@local/tsconfig": "*",
     "typescript": "^4.5.3"
   },
   "dependencies": {
